--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/anujeet98/NodeJS-Starter#readme",
   "devDependencies": {
+    "body-parser": "^1.20.2",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
